[gd_scene load_steps=3 format=3 uid="uid://e1adf0mjl5qe"]

[ext_resource type="PackedScene" uid="uid://rflulhsuy3ax" path="res://material_maker/widgets/float_edit/float_edit.tscn" id="1"]
[ext_resource type="Script" path="res://material_maker/panels/preview_3d/mesh_config_popup.gd" id="2"]

[node name="MeshConfiguration" type="PopupPanel"]
size = Vector2i(217, 101)
visible = true
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 213.0
offset_bottom = 97.0

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mesh configuration"

[node name="UVScale" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/UVScale"]
layout_mode = 2
tooltip_text = "The texture's display scale on the 3D preview.
Higher values will make the texture span a smaller area.
The texture will repeat automatically to cover the whole mesh.
This can be used to check how well a material tiles."
mouse_filter = 1
text = "UV Scale:"

[node name="X" parent="VBoxContainer/UVScale" instance=ExtResource("1")]
layout_mode = 2
value = 1.0
max_value = 5.0
step = 0.01
float_only = true

[node name="Y" parent="VBoxContainer/UVScale" instance=ExtResource("1")]
layout_mode = 2
value = 1.0
max_value = 5.0
step = 0.01
float_only = true

[node name="Tesselated" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "If tesselation is enabled, the mesh will be subdivided, which is necessary for materials that use vertex displacement."
text = "Tesselated"

[node name="Parameters" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[connection signal="popup_hide" from="." to="." method="_on_MeshConfiguration_popup_hide"]
[connection signal="value_changed" from="VBoxContainer/UVScale/X" to="." method="_on_UV_value_changed"]
[connection signal="value_changed" from="VBoxContainer/UVScale/Y" to="." method="_on_UV_value_changed"]
[connection signal="toggled" from="VBoxContainer/Tesselated" to="." method="_on_Tesselated_toggled"]
